tests/data/partialapp/negative/No warning for left piped args.fs
module M

let myFunc a b = a + b

myFunc 10 <| 20
